--- a/app/stylesheets/Menu.css
+++ b/app/stylesheets/Menu.css
@@ -14,19 +14,54 @@
 .menu_element {
 	display: none;
 	float: left;
+	max-width: 450px;
 	margin-right: 10px;
-	padding-top: 5px;
-	padding-left: 8px;
-	padding-right: 8px;
-	font-size: 30px;
 	border-style: solid;
 	border-width: 2px; 
 	border-color: white;
+	padding-top: 5px;
+	padding-left: 8px;
+	padding-right: 8px;
+	font-size: 26px;
 	background-color: rgba(0,0,0,0.8);
 }
 
+
+#epg {
+	display: none;
+	position: absolute;
+	left: 715px;
+	width: 500px;
+	white-space: normal;
+	transition: left 2s cubic-bezier(.02, .01, .47, 1);
+	-webkit-transition: left 2s cubic-bezier(.02, .01, .47, 1);
+}
+
+.epgSub {
+	max-height: 500px;
+	overflow: hidden;
+	margin-bottom: 10px;
+	border-style: solid;
+	border-width: 2px; 
+	border-color: white;
+	padding: 10px;
+	text-align: left;
+	word-wrap: break-word;
+	font-size: 21px;
+	color: rgb(140,140,140);
+	background-color: rgba(0,0,0,0.8);
+}
+
+.epgHeader {
+	color: white;
+	margin-bottom: 7px;
+}
+
+.epgActive {
+	color: white;
+}
+
 .item {
-	font-size: 30px;
 	color: rgb(140,140,140);
 	white-space: nowrap;
 	overflow: hidden;
@@ -35,31 +70,4 @@
 .item.selected {
 	color: white;
 	overflow: scroll;
-}
-
-#root {
-	max-width: 200px;
-}
-
-#direkte {
-	max-width: 490px;
-}
-
-#a_aa {
-	width: 40px;
-	padding-left: 0px;
-	padding-right: 0px;
-	text-align: center;
-}
-
-#shows {
-	max-width: 490px;
-}
-
-#seasons {
-	max-width: 180px;
-}
-
-#episodes {
-	max-width: 490px;
 }
